Video Effect implementation complete, but WinML effect needs further debugging (null SoftwareBitmap)

--- a/TinyYOLO/VideoPage.xaml
+++ b/TinyYOLO/VideoPage.xaml
@@ -5,26 +5,95 @@
     xmlns:local="using:TinyYOLO"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:viewModels="using:TinyYOLO.ViewModels"
+    xmlns:primitives="using:Telerik.UI.Xaml.Controls.Primitives"
+    xmlns:converters="using:TinyYOLO.Converters"
     mc:Ignorable="d">
+
+    <Page.DataContext>
+        <viewModels:VideoPageViewModel x:Name="PageViewModel" />
+    </Page.DataContext>
+
+    <Page.Resources>
+        <converters:ObjectToFloatConverter x:Key="ObjToFloatConverter" />
+        <converters:NullToVisibilityConverter x:Key="NullToVisibilityConverter" />
+    </Page.Resources>
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid.RowDefinitions>
-            <RowDefinition/>
-            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto" />
+            <RowDefinition />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <MediaElement x:Name="VideoPlayer"/>
-        
-        <CommandBar Grid.Row="1">
-            <AppBarButton x:Name="LoadVideoButton"
-                          Icon="Add"
-                          Label="Load Video" 
-                          Click="LoadVideoButton_OnClick"/>
-            <AppBarButton x:Name="StartProcessingButton"
-                          IsEnabled="False"
-                          Icon="Play"
-                          Label="Start Processing"
-                          Click="StartProcessingButton_OnClick"/>
+        <Grid x:Name="HeaderGrid"
+              Background="{ThemeResource AppBarBackgroundThemeBrush}">
+            <TextBlock Text="WinML Video Effect - TinyYOLO"
+                       HorizontalAlignment="Center"
+                       Style="{StaticResource TitleTextBlockStyle}"
+                       Foreground="{ThemeResource AppBarItemForegroundThemeBrush}"
+                       Margin="10" />
+        </Grid>
+
+        <Grid x:Name="PreviewAreaGrid"
+              Grid.Row="1">
+
+            <CaptureElement x:Name="PreviewMediaElement" />
+
+            <ListView x:Name="EffectsListView"
+                      ItemsSource="{Binding VideoEffects}"
+                      SelectedItem="{Binding SelectedEffect, Mode=TwoWay}"
+                      SelectionChanged="EffectsListView_OnSelectionChanged"
+                      HorizontalAlignment="Left">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <Grid Background="#AAFFFFFF"
+                              Margin="0,10">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto" />
+                                <ColumnDefinition />
+                            </Grid.ColumnDefinitions>
+
+                            <Image Source="{Binding IconImagePath}"
+                                   Stretch="UniformToFill"
+                                   Width="90" />
+
+                            <TextBlock Text="{Binding DisplayName}"
+                                       Style="{ThemeResource TitleTextBlockStyle}"
+                                       VerticalAlignment="Center"
+                                       Margin="10,0"
+                                       Grid.Column="1" />
+                        </Grid>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+                <ListView.ItemContainerStyle>
+                    <Style TargetType="ListViewItem">
+                        <Setter Property="HorizontalAlignment"
+                                Value="Stretch" />
+                        <Setter Property="HorizontalContentAlignment"
+                                Value="Stretch" />
+                    </Style>
+                </ListView.ItemContainerStyle>
+            </ListView>
+        </Grid>
+
+
+
+        <CommandBar Grid.Row="2">
+            <AppBarButton x:Name="ReloadVideoStreamButton"
+                          Label="Reload Video Stream"
+                          Icon="Refresh"
+                          Background="Red"
+                          Foreground="White"
+                          Click="ReloadVideoStreamButton_OnClick"
+                          Visibility="Collapsed"/>
         </CommandBar>
+
+        <primitives:RadBusyIndicator IsActive="{Binding IsBusy}"
+                                     Content="{Binding IsBusyMessage}"
+                                     AnimationStyle="AnimationStyle7"
+                                     Background="#CCFFFFFF"
+                                     Grid.Row="0"
+                                     Grid.RowSpan="3" />
     </Grid>
 </Page>
