--- a/TinyYOLO/Views/VideoPage.xaml
+++ b/TinyYOLO/Views/VideoPage.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="TinyYOLO.VideoPage"
+    x:Class="TinyYOLO.Views.VideoPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:TinyYOLO"
